--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Beyond my professional pursuits, I am deeply passionate about content creation a
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/bpp.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/bpp.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Instagram Marketing Fundamentals</h4>
               <div class="portfolio-links">
