--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ Beyond my professional pursuits, I am deeply passionate about content creation a
 		<div class="col-lg-4 col-md-6 portfolio-item filter-project">
           <center><h4>Kean's Claremorris Facebook</h4></center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/face.png" class="img-fluid" alt="">
+            <img src="assets/img/project/Face.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               
               <div class="portfolio-links">
