--- a/index.html
+++ b/index.html
@@ -388,14 +388,35 @@ Beyond my professional pursuits, I am deeply passionate about content creation a
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">College Projects</li>
-            <li data-filter=".filter-project">Work Experience</li>
+  <li data-filter="*" class="filter-active">All</li>
+  <li data-filter=".filter-app">College Projects</li>
+  <li data-filter=".filter-project">Work Experience</li>
           </ul>
         </div>
       </div>
 
-      <div class="row portfolio-container">
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    // Initialize Isotope
+    var $grid = $(".portfolio-container").isotope({
+      itemSelector: ".portfolio-item",
+      layoutMode: "fitRows"
+    });
+
+    // Filter items on button click
+    $("#portfolio-flters li").on("click", function () {
+      // Change active class on filters
+      $("#portfolio-flters li").removeClass("filter-active");
+      $(this).addClass("filter-active");
+
+      // Get the data-filter value and apply it
+      var filterValue = $(this).attr("data-filter");
+      $grid.isotope({ filter: filterValue });
+    });
+  });
+</script>
+
+      <div class="portfolio-container">
         
 		<div class="col-lg-4 col-md-6 portfolio-item filter-project">
           <center><h4>Kean's Claremorris Instagram</h4></center>
