--- a/index.html
+++ b/index.html
@@ -388,16 +388,16 @@ Beyond my professional pursuits, I am deeply passionate about content creation a
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-  <li data-filter="*" class="filter-active">All</li>
-  <li data-filter=".filter-app">College Projects</li>
-  <li data-filter=".filter-project">Work Experience</li>
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-app">College Projects</li>
+            <li data-filter=".filter-project">Work Experience</li>
           </ul>
         </div>
       </div>
 	    
-      <div class="portfolio-container">
+      <div class="row portfolio-container">
         
-		<div class="col-lg-4 col-md-6 portfolio-item filter-project">
+	<div class="col-lg-4 col-md-6 portfolio-item filter-project">
           <center><h4>Kean's Claremorris Instagram</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/Insta.png" class="img-fluid" alt="">
