--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@ Beyond my professional pursuits, I am deeply passionate about content creation a
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">College Projects</li>
-            <li data-filter=".filter-project">Work Experience</li>
+            <!--<li data-filter="*" class="filter-active">All</li> -->
+            <!--<li data-filter=".filter-app">College Projects</li> -->
+            <!--<li data-filter=".filter-project">Work Experience</li> -->
           </ul>
         </div>
       </div>
