--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1UntFeJPAxievPbcJjnCp1Uzsz6v3UvQG/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://mega.nz/file/ZBhwyAqJ#yAZd4IohxXe0u2XpRq-GJlh3Oc7fNSOeSFfPO6L_B1g" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
