--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <p>
 		  I graduated with a Bachelor of Science (Level 8) in Computing and Digital Media in 2023 from ATU Galway, which provided me with a strong foundation in digital technologies, creative media, and robust skills in marketing and digital marketing. During my studies, I became particularly interested in the dynamic and ever-evolving nature of marketing, which inspired me to pursue a career in this field after college. My academic background equipped me with the technical knowledge and strategic thinking necessary to excel in digital marketing, content creation, and data-driven decision-making.
 <br><br>
-Currently, I am employed as a Marketing Assistant at Kean's Claremorris Euronics Home & Garden, where I have been applying my expertise in digital marketing and content management to enhance brand presence and customer engagement for over a year. Prior to this role, I gained valuable experience managing website and social media operations at HOMEworld, where I spent a year successfully executing digital strategies to drive online engagement and growth. <br><br>These professional experiences have further solidified my passion for marketing and my commitment to delivering impactful results.
+Currently, I am employed as a Marketing Executive at Kean's Claremorris Euronics Home & Garden, where I have been applying my expertise in digital marketing and content management to enhance brand presence and customer engagement for over a year. Prior to this role, I gained valuable experience managing website and social media operations at HOMEworld, where I spent a year successfully executing digital strategies to drive online engagement and growth. <br><br>These professional experiences have further solidified my passion for marketing and my commitment to delivering impactful results.
 
 Beyond my professional pursuits, I am deeply passionate about content creation and video editing, with a particular focus on crafting engaging and visually compelling content. Outside of work, I enjoy staying active through go-karting and football, which help me maintain a balanced and dynamic lifestyle.
           </p>
@@ -308,7 +308,7 @@ Beyond my professional pursuits, I am deeply passionate about content creation a
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="http://www.keanscm.ie/" style="color:#12d640">Kean's Claremorris Euronics Home & Garden</a><br> </h4>
                 <h5 style="text-align:left;">January 2024 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>Marketing Assistant</em></p>
+                <p style="text-align:left;color:#fff"><em>Marketing Executive</em></p>
                 <ul style="text-align:left;">
                   <li><b>Social Media Management:</b> Developed, crfeated, and scheduled compelling content across Facebook, Instagram, and TikTok to enhance brand presence. Monitored, engaged with, and responded to audience interactions, comments, and inquiries to foster community engagement and improve customer satisfaction.</li><br>
                   <li><b>Content Creation:</b> Produced high-quality written and video content that highlighted the company’s industry expertise and promoted products, services, and events. Ensured content aligned with the brand voice and resonated with target audiences to drive engagement and brand loyalty.</li><br>
