--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@ When I’m not behind a screen, you’ll probably find me watching Formula 1, pl
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Skills:", "Ad Management", "Content Creator","Graphic Designer","SEO Optimization", "Coder", "AI Enthusiast"],
+      strings: ["Skills:", "Ad Management", "UI/UX & Web Design","Graphic Design & Branding","SEO & Web Analytics", "Website Management", "Email & Campaign Marketing"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
